tests/baselines/reference/overloadingStaticFunctionsInFunctions.errors.txt
==== tests/cases/compiler/overloadingStaticFunctionsInFunctions.ts (14 errors) ====
    function boo {
                 ~
!!! error TS1005: '(' expected.
      static test()
      ~~~~~~
!!! error TS1129: Statement expected.
             ~~~~
!!! error TS2304: Cannot find name 'test'.
      static test(name:string)
      ~~~~~~
!!! error TS1129: Statement expected.
                      ~
!!! error TS1005: ',' expected.
             ~~~~
!!! error TS2304: Cannot find name 'test'.
                  ~~~~
!!! error TS2304: Cannot find name 'name'.
                       ~~~~~~
!!! error TS2304: Cannot find name 'string'.
      static test(name?:any){ }
      ~~~~~~
!!! error TS1129: Statement expected.
                       ~
!!! error TS1109: Expression expected.
                            ~
!!! error TS1005: ';' expected.
             ~~~~
!!! error TS2304: Cannot find name 'test'.
                  ~~~~
!!! error TS2304: Cannot find name 'name'.
                        ~~~
!!! error TS2304: Cannot find name 'any'.
    }